--- a/templates/410.html
+++ b/templates/410.html
@@ -26,7 +26,8 @@
             <h1>500</h1>
         </div>
         <h2>Oops! Data not Found!</h2>
-        <p>Your input does not match any record in our database. Please check your input exist and make sure you are using the correct format. You can contact us if the problem persists.</p>
+        <p>Your input does not match any record in our database. Please check your input exist and make sure you are
+            using the correct format. You can contact us if the problem persists.</p>
         <a href="#" onclick="history.back();">Go back</a>
         <a href="{{ url_for('index') }}">Homepage</a>
         <a href="https://www.unl.edu">UNL</a>
