--- a/templates/500.html
+++ b/templates/500.html
@@ -26,7 +26,8 @@
             <h1>500</h1>
         </div>
         <h2>Oops! Sorry, it's me, not you!</h2>
-        <p>Internal Server Error. An unexpected error seems to have occurred. Why not try refreshing your page or you can contact us if the problem persists.</p>
+        <p>Internal Server Error. An unexpected error seems to have occurred. Why not try refreshing your page or you
+            can contact us if the problem persists.</p>
         <a href="#" onclick="history.back();">Go back</a>
         <a href="{{ url_for('index') }}">Homepage</a>
         <a href="https://www.unl.edu">UNL</a>
