change download page to apache file root

--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -45,7 +45,7 @@
                     <a class="nav-link" href="{{ url_for('statistics') }}">Statistics</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('download') }}">Download</a>
+                    <a class="nav-link" href="http://bcb.unl.edu/dbpup_download/">Download</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('help') }}">Help</a>
