Change family_count.png to pygal svg

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
         </ul>
     </div>
     <br>
-    <div class="row">
+    <div class="familyInformation">
         {{ content| safe }}
     </div>
 {% endblock %}
