--- a/templates/main.html
+++ b/templates/main.html
@@ -11,7 +11,7 @@
         </div>
     </div>
     <br>
-    <div class="row">
+    <div class="familyInformation">
         {{ content| safe }}
     </div>
 {% endblock %}
