--- a/templates/characterized.html
+++ b/templates/characterized.html
@@ -88,7 +88,9 @@
                         </td>
 
                     {% endif %}
-                    <td><a href="https://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?id={{ record.tax_id }}">{{ record.strain }}</a></td>
+                    <td>
+                        <a href="https://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?id={{ record.tax_id }}">{{ record.strain }}</a>
+                    </td>
                     <td>
                         {% for element in sub[record.number] %}
                             {% if element[2] == '' %}
