Move Network to family page

--- a/templates/family.html
+++ b/templates/family.html
@@ -33,6 +33,9 @@
             <li>
                 <button><a href="{{ url_for('trembl', family_id = family_id) }}">TrEMBL</a></button>
             </li>
+            <li>
+                <button><a href="{{ url_for('network', family_id = family_id) }}">Network</a></button>
+            </li>
         </ul>
     </div>
     <br>
