--- a/templates/classes.html
+++ b/templates/classes.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Class{% endblock %}
 
 {% block content %}
     <div class="row">
