--- a/templates/main.html
+++ b/templates/main.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Main{% endblock %}
 
 {% block content %}
     <!-- Main Content Area-->
