--- a/templates/subfamily.html
+++ b/templates/subfamily.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}subfamily{% endblock %}
+{% block title %}Subfamily{% endblock %}
 
 {% block content %}
     {% if content=="<p>redirect</p>" %}
