--- a/templates/swissport.html
+++ b/templates/swissport.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} Extend Swiss Data {% endblock %}
+{% block title %}Swiss-Prot Data{% endblock %}
 {% block content %}
     <div class="row">
         <div class="page-header">
