--- a/templates/tree.html
+++ b/templates/tree.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} Extend Swiss Data {% endblock %}
+{% block title %}Tree Data{% endblock %}
 {% block content %}
 
     <style>
