--- a/templates/characterized.html
+++ b/templates/characterized.html
@@ -14,7 +14,9 @@
     <script defer type="text/javascript">
         $(document).ready(function () {
             $('#data-table').DataTable({
-                "scrollX": true,
+                "initComplete": function () {
+                    $("#data-table").wrap("<div style='overflow:auto; width:100%;position:relative;'></div>");
+                },
                 lengthMenu: [[10, 25, 50, -1], ['10 rows', '25 rows', '50 rows', 'Show all']],
                 dom: 'Bfrtip',
                 columnDefs: [{
