--- a/templates/_head.html
+++ b/templates/_head.html
@@ -54,7 +54,28 @@
     <link href="{{ url_for('static', filename='styles/custom.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='styles/style.css') }}" rel="stylesheet">
 
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HCEW4B3ZKM"></script>
+    <!-- Tracking -->
+    <!-- Matomo -->
+    <script type="text/javascript">
+        var _paq = window._paq = window._paq || [];
+        /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+        _paq.push(["setDocumentTitle", document.domain + "/" + document.title]);
+        _paq.push(["setCookieDomain", "*.bcb.unl.edu"]);
+        _paq.push(['trackPageView']);
+        _paq.push(['enableLinkTracking']);
+        (function () {
+            var u = "//matomo.lamgmt.ml/";
+            _paq.push(['setTrackerUrl', u + 'matomo.php']);
+            _paq.push(['setSiteId', '1']);
+            var d = document, g = d.createElement('script'), s = d.getElementsByTagName('script')[0];
+            g.type = 'text/javascript';
+            g.async = true;
+            g.src = u + 'matomo.js';
+            s.parentNode.insertBefore(g, s);
+        })();
+    </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-B96GV46CY4"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
 
@@ -64,8 +85,10 @@
 
         gtag('js', new Date());
 
-        gtag('config', 'G-HCEW4B3ZKM');
+        gtag('config', 'G-B96GV46CY4');
     </script>
+    <!-- Clarity -->
+    <meta name="msvalidate.01" content="E681F99CAE424DD02A4FF1F62282E3AB"/>
     <script type="text/javascript">
         (function (c, l, a, r, i, t, y) {
             c[a] = c[a] || function () {
@@ -76,6 +99,6 @@
             t.src = "https://www.clarity.ms/tag/" + i;
             y = l.getElementsByTagName(r)[0];
             y.parentNode.insertBefore(t, y);
-        })(window, document, "clarity", "script", "4bsgqhsnaw");
+        })(window, document, "clarity", "script", "5muq77dy5n");
     </script>
 </head>
