Preform Basic Mainance (upgrade js, typo, SEO)

--- a/templates/characterized.html
+++ b/templates/characterized.html
@@ -29,7 +29,7 @@
                     {
                         extend: 'csvHtml5',
                         fieldBoundary: '',
-                        text: 'export',
+                        text: 'Export',
                         exportOptions: {
                             columns: [-1]
                         }
@@ -37,7 +37,7 @@
                     {
                         extend: 'copy',
                         fieldBoundary: '',
-                        text: 'copy',
+                        text: 'Copy',
                         title: '',
                         header: '\n',
                         exportOptions: {
