--- a/templates/swissport.html
+++ b/templates/swissport.html
@@ -38,7 +38,7 @@
                     {
                         extend: 'csvHtml5',
                         fieldBoundary: '',
-                        text: 'export',
+                        text: 'Export',
                         exportOptions: {
                             columns: [0, 1, 2, 3, 4, 5]
                         }
@@ -46,7 +46,7 @@
                     {
                         extend: 'copy',
                         fieldBoundary: '',
-                        text: 'copy',
+                        text: 'Copy',
                         title: '',
                         header: '\n',
                         exportOptions: {
