--- a/templates/_footer.html
+++ b/templates/_footer.html
@@ -1,9 +1,10 @@
 <hr>
 <div class="row">
     <div class="col-lg-12">
-        <p class="text-center">Copyright &copy;
-            2020 - {{ now.year }}<a href="https://www.unl.edu">University of Nebraska - Lincoln</a>, <a
-                    href="http://bcb.unl.edu">Yin
-                Lab </a>. All rights reserved. Handcoded by Yinchao He &amp; Pengxiang Zhang</p>
+    	<p class="text-center" style="text-align: center;font-size: 0.8em!important;">
+        <span style="color: #999999;">Copyright © 2020 - {{ now.year }}
+          <a style="color: #999999;" href="https://www.unl.edu">University of Nebraska-Lincoln</a> | <a style="color: #999999;" href="http://bcb.unl.edu/">Dr. Yin's Lab at UNL</a>.</span><br>
+        <a style="color: #999999;">Handcoded by Pengxiang Zhang &amp; Yinchao He.</a>
+      </p>
     </div>
 </div>
