--- a/templates/_head.html
+++ b/templates/_head.html
@@ -1,55 +1,52 @@
 <head>
     <meta charset="utf-8">
     <title>{{ title+config['title'] }}</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-    <meta name="keywords" content="{{ config['keywords'] }}">
-    <meta name="description" content="{{ description }}">
-    <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta content="width=device-width, initial-scale=1, viewport-fit=cover" name="viewport">
+    <meta content="{{ config['keywords'] }}" name="keywords">
+    <meta content="{{ description }}" name="description">
+    <link href="{{ url_for('static', filename='favicon.ico') }}" rel="icon">
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
-            integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
-            crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"
-            integrity="sha512-iztkobsvnjKfAtTNdHkGVjAYTrrtlC7mGp/54c40wowO7LhURYl3gVzzcEqGl/qKXQltJ2HwMrdLcNUdo+N/RQ=="
-            crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css"
-          integrity="sha512-6MXa8B6uaO18Hid6blRMetEIoPqHf7Ux1tnyIQdpt9qI5OACx7C+O3IVTr98vwGnlcg0LOLa02i9Y1HpVhlfiw=="
-          crossorigin="anonymous"/>
+    <script crossorigin="anonymous"
+            integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+            src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script crossorigin="anonymous"
+            integrity="sha512-oBTprMeNEKCnqfuqKd6sbvFzmFQtlXS3e0C/RGFV0hD6QzhHV+ODfaQbAlmY6/q0ubbwlAM/nCJjkrgA3waLzg=="
+            src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link crossorigin="anonymous" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/css/bootstrap.min.css"
+          integrity="sha512-Dop/vW3iOtayerlYAqCgkVr2aTr2ErwwTYOvRFUpzl2VhCMJyjQF0Q9TjUXIo6JhuM/3i0vVEt2e/7QQmnHQqw=="
+          rel="stylesheet"/>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/js/jquery.dataTables.min.js"
+    <script crossorigin="anonymous"
             integrity="sha512-BkpSL20WETFylMrcirBahHfSnY++H2O1W+UnEEO4yNIl+jI2+zowyoGJpbtk6bx97fBXf++WJHSSK2MV4ghPcg=="
-            crossorigin="anonymous"></script>
-    <link rel="stylesheet"
+            src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/js/jquery.dataTables.min.js"></script>
+    <link crossorigin="anonymous"
           href="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/css/jquery.dataTables.min.css"
           integrity="sha512-1k7mWiTNoyx2XtmI96o+hdjP8nn0f3Z2N4oF/9ZZRgijyV4omsKOXEnqL1gKQNPy2MTSP9rIEWGcH/CInulptA=="
-          crossorigin="anonymous"/>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables.net-select/1.3.0/dataTables.select.min.js"
-            integrity="sha512-AmOf7RQXiCKRwfN2+n2UJNHGzHJ4K4S2YLC0KY0iN/Lnpkfk8IIczDB66SxSO3WGY4ysgc8z/gBmTD6pHNGmCA=="
-            crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables.net-select/1.3.0/dataTables.select.js"
-            integrity="sha512-AKLT8695GVbB2UW4AXZv2MUN104zF7U0nZRUoF8JKgu2YCrqhDmIcxGJJAtX+GW+AwOBx+qNJ9vQuBSECveOzQ=="
-            crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables-buttons/1.6.5/js/dataTables.buttons.min.js"
-            integrity="sha512-C6bH79vwmIG/SVdXp2MT1SziCMrJ35rywNWqbYFLJXuiQsLlS5PH356A+FjsboOUaVjvtd+ELK3pb9hq0SXNrQ=="
-            crossorigin="anonymous"></script>
-    <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/datatables.net-buttons-dt/1.6.5/buttons.dataTables.min.css"
-          integrity="sha512-SnfMfCQIQCT3DNJs0f6TCES+nz0iHF4EOQrBLPiRzvxCOZwMl/dtwRpPu7ZrJwINo5KixIBqPtm4y//Z2CX83g=="
-          crossorigin="anonymous"/>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables-buttons/1.6.5/js/buttons.html5.min.js"
+          rel="stylesheet"/>
+    <script crossorigin="anonymous"
+            integrity="sha512-uMQIzRTYB4sDMMdkz8SocjrrNFpJvQjmAfrDrAHZe348+5451qsU8HAWxeB5stYB3XdiPGYupJfV2vgVw5oRGQ=="
+            src="https://cdnjs.cloudflare.com/ajax/libs/datatables.net-select/1.3.3/dataTables.select.min.js"></script>
+    <script crossorigin="anonymous"
+            integrity="sha512-EzaqIDcdBg8g037o9E12U69oY/mfHffJJzUtB6dgd67AB4IXkMi1/7WY6og4fKSVXtqqt35S/R5ClqNHjSIH4g=="
+            src="https://cdnjs.cloudflare.com/ajax/libs/datatables-buttons/1.7.0/js/dataTables.buttons.min.js"></script>
+    <link crossorigin="anonymous"
+          href="https://cdnjs.cloudflare.com/ajax/libs/datatables.net-buttons-dt/1.7.0/buttons.dataTables.min.css"
+          integrity="sha512-KzqwJFLNq+u+1P5Us3npfxbDCG/MuNL+N4TrXLakYJMOzA6fcNnlmtGZTbyIjN+e/RZ6J8PHkLsLAGim/dcc8Q=="
+          rel="stylesheet"/>
+    <script crossorigin="anonymous"
             integrity="sha512-ehHOosb2HF/KK/7kZSGFaOijR+smIS5PvSPBG0He69iTEQe30Q+g0NLJYQUmySpqGrol1frtzE1Re2a9AebxiQ=="
-            crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.1/jszip.min.js"
-            integrity="sha512-3An18ul6uJ0pEcdCYMiYeCmhC2pnw/EYvpQRWDLg6dNB17MIVW46fjpAxWkdblWEjPTtdvfYK6FfXzPBJTXwYg=="
-            crossorigin="anonymous"></script>
+            src="https://cdnjs.cloudflare.com/ajax/libs/datatables-buttons/1.7.0/js/buttons.html5.min.js"></script>
+    <script crossorigin="anonymous"
+            integrity="sha512-uVSVjE7zYsGz4ag0HEzfugJ78oHCI1KhdkivjQro8ABL/PRiEO4ROwvrolYAcZnky0Fl/baWKYilQfWvESliRA=="
+            src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.6.0/jszip.min.js"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/cytoscape/3.15.2/cytoscape.min.js"
-            integrity="sha512-PqivlaNWoXvHYlvku80fbWO/yBiRmGhISj5uVdAodyqsGprDcVZy6aecJDVNE0fIIE/YeiOzp5yJTR5ZjFlR4Q=="
-            crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"
+    <script crossorigin="anonymous"
+            integrity="sha512-MgZAJudXekIHKoFtEk1NUwpSSCDt6JlfkUdwgX/1ustAyJltGO82ayHPOyK31xy9q84nGecgtF+D9hdm2OZldg=="
+            src="https://cdnjs.cloudflare.com/ajax/libs/cytoscape/3.18.1/cytoscape.min.js"></script>
+    <script crossorigin="anonymous"
             integrity="sha512-oJp0DdQuQQrRsKVly+Ww6fAN1GwJN7d1bi8UubpEbzDUh84WrJ2CFPBnT4LqBCcfqTcHR5OGXFFhaPe3g1/bzQ=="
-            crossorigin="anonymous"></script>
+            src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
 
     <link href="{{ url_for('static', filename='styles/custom.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='styles/style.css') }}" rel="stylesheet">
@@ -86,19 +83,5 @@
         gtag('js', new Date());
 
         gtag('config', 'G-B96GV46CY4');
-    </script>
-    <!-- Clarity -->
-    <meta name="msvalidate.01" content="E681F99CAE424DD02A4FF1F62282E3AB"/>
-    <script type="text/javascript">
-        (function (c, l, a, r, i, t, y) {
-            c[a] = c[a] || function () {
-                (c[a].q = c[a].q || []).push(arguments)
-            };
-            t = l.createElement(r);
-            t.async = 1;
-            t.src = "https://www.clarity.ms/tag/" + i;
-            y = l.getElementsByTagName(r)[0];
-            y.parentNode.insertBefore(t, y);
-        })(window, document, "clarity", "script", "5muq77dy5n");
     </script>
 </head>
