--- a/templates/trembl.html
+++ b/templates/trembl.html
@@ -41,7 +41,7 @@
                     {
                         extend: 'csvHtml5',
                         fieldBoundary: '',
-                        text: 'export',
+                        text: 'Export',
                         exportOptions: {
                             columns: [0, 1, 2, 3, 4, 5]
                         }
@@ -49,7 +49,7 @@
                     {
                         extend: 'copy',
                         fieldBoundary: '',
-                        text: 'copy',
+                        text: 'Copy',
                         title: '',
                         header: '\n',
                         exportOptions: {
