--- a/templates/base.html
+++ b/templates/base.html
@@ -3,8 +3,10 @@
 {% include '_head.html' %}
 <body>
 <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N4DK4P5"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<noscript>
+    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N4DK4P5"
+            height="0" width="0" style="display:none;visibility:hidden"></iframe>
+</noscript>
 <!-- End Google Tag Manager (noscript) -->
 {% include '_header.html' %}
 <div class="container-fluid" id="material-content">
