--- a/templates/characterized.html
+++ b/templates/characterized.html
@@ -77,34 +77,39 @@
                     <td>{{ record.number }}</td>
                     <td>
                         {% if "_" in record.family: %}
-                        <a href="{{ url_for('subfamily', family_id = record.family) }}">{{ record.family }}</a>
+                            <a href="{{ url_for('subfamily', family_id = record.family) }}">{{ record.family }}</a>
                         {% else %}
-                        <a href="{{ url_for('family', family_id = record.family) }}">{{ record.family }}</a>
+                            <a href="{{ url_for('family', family_id = record.family) }}">{{ record.family }}</a>
                         {% endif %}
                     </td>
-                    <td><a href="https://doi.org/{{ record.doi }}" rel="noopener noreferrer" target="_blank">{{ record.doi }}</a></td>
+                    <td><a href="https://doi.org/{{ record.doi }}" rel="noopener noreferrer"
+                           target="_blank">{{ record.doi }}</a></td>
                     <td>{{ record.protein_name }}</td>
                     <td>{{ record.gene_name }}</td>
-                    <td><a href="https://www.uniprot.org/uniprot/{{ record.uniq_id }}" rel="noopener noreferrer" target="_blank">{{ record.uniq_id }}</a></td>
+                    <td><a href="https://www.uniprot.org/uniprot/{{ record.uniq_id }}" rel="noopener noreferrer"
+                           target="_blank">{{ record.uniq_id }}</a></td>
                     {% if record.ec == '-1' %}
                         <td>{{ ' ' }}</td>
                     {% else %}
                         <td>
                             {% for element in ec[record.number] %}
-                                <a href="https://www.brenda-enzymes.org/enzyme.php?ecno={{ element }}" rel="noopener noreferrer" target="_blank">{{ element }}</a>
+                                <a href="https://www.brenda-enzymes.org/enzyme.php?ecno={{ element }}"
+                                   rel="noopener noreferrer" target="_blank">{{ element }}</a>
                             {% endfor %}
                         </td>
 
                     {% endif %}
                     <td>
-                        <a href="https://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?id={{ record.tax_id }}" rel="noopener noreferrer" target="_blank">{{ record.strain }}</a>
+                        <a href="https://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?id={{ record.tax_id }}"
+                           rel="noopener noreferrer" target="_blank">{{ record.strain }}</a>
                     </td>
                     <td>
                         {% for element in sub[record.number] %}
                             {% if element[2] == '' %}
                                 {{ element[0] }}{{ element[1] }};
                             {% else %}
-                                <a href="{{ element[2] }}" rel="noopener noreferrer" target="_blank">{{ element[0] }}</a>{{ element[1] }};
+                                <a href="{{ element[2] }}" rel="noopener noreferrer"
+                                   target="_blank">{{ element[0] }}</a>{{ element[1] }};
                             {% endif %}
                         {% endfor %}
                     </td>
@@ -123,7 +128,8 @@
                     {% else %}
                         <td>
                             {% for element in rows[record.number] %}
-                                <a href="https://www.rcsb.org/structure/{{ element[1] }}" rel="noopener noreferrer" target="_blank">{{ element[0] }}</a>
+                                <a href="https://www.rcsb.org/structure/{{ element[1] }}" rel="noopener noreferrer"
+                                   target="_blank">{{ element[0] }}</a>
                             {% endfor %}
                         </td>
                     {% endif %}
