--- a/templates/_footer.html
+++ b/templates/_footer.html
@@ -1,10 +1,11 @@
 <hr>
 <div class="row">
     <div class="col-lg-12">
-    	<p class="text-center" style="text-align: center;font-size: 0.8em!important;">
+        <p class="text-center" style="text-align: center;font-size: 0.8em!important;">
         <span style="color: #999999;">Copyright © {{ now.year }}
-          <a style="color: #999999;" href="https://www.unl.edu">University of Nebraska-Lincoln</a> | <a style="color: #999999;" href="http://bcb.unl.edu/">Dr. Yin's Lab at UNL</a></span><br>
-        <a style="color: #999999;">Handcoded by Pengxiang Zhang &amp; Yinchao He.</a>
-      </p>
+          <a style="color: #999999;" href="https://www.unl.edu">University of Nebraska-Lincoln</a> | <a
+                    style="color: #999999;" href="http://bcb.unl.edu/">Dr. Yin's Lab at UNL</a></span><br>
+            <a style="color: #999999;">Handcoded by Pengxiang Zhang &amp; Yinchao He.</a>
+        </p>
     </div>
 </div>
