Small Change on Cluster

--- a/templates/uhgp.html
+++ b/templates/uhgp.html
@@ -33,7 +33,7 @@
             <li><a href="{{ url_for('uhgp', name_id = 'South America') }}">South America</a> <span
                     class="divider"></span>
             </li>
-            <li><a href="{{ url_for('uhgp', name_id = 'NA') }}">N/A</a> <span
+            <li><a href="{{ url_for('uhgp', name_id = 'Others') }}">Others</a> <span
                     class="divider"></span>
             </li>
             <li><a href="{{ url_for('uhgp', name_id = 'Cluster') }}">Cluster</a> <span
