--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -12,7 +12,7 @@
             </button>
             <a href="https://www.unl.edu">
                 <img alt="Brand" src="{{ url_for('static', filename='images/unl.svg') }}"
-                     class="navbar-brand" ></a>
+                     class="navbar-brand"></a>
             <a class="navbar-brand" href="{{ url_for('index') }}">{{ config['title'] }}</a>
         </div>
 
@@ -39,7 +39,7 @@
                     <a class="nav-link" href="{{ url_for('characterized') }}">Characterized</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('clusters') }}">Clusters</a>
+                    <a class="nav-link" href="{{ url_for('uhgp_home') }}">UHGP</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('blast') }}">Blast</a>
