Update per requirement at 6/22

--- a/templates/_head.html
+++ b/templates/_head.html
@@ -54,12 +54,12 @@
     <link href="{{ url_for('static', filename='styles/custom.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='styles/style.css') }}" rel="stylesheet">
 
-    <!-- Matomo Tag Manager -->
-    <script type="text/javascript">
-    var _mtm = window._mtm = window._mtm || [];
-    _mtm.push({'mtm.startTime': (new Date().getTime()), 'event': 'mtm.Start'});
-    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('scri$
-    g.type='text/javascript'; g.async=true; g.src='https://matomo.zhang.ml/js/c$
-    </script>
-    <!-- End Matomo Tag Manager -->
+<!-- Matomo Tag Manager -->
+<script type="text/javascript">
+var _mtm = window._mtm = window._mtm || [];
+_mtm.push({'mtm.startTime': (new Date().getTime()), 'event': 'mtm.Start'});
+var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+g.type='text/javascript'; g.async=true; g.src='https://matomo.zhang.ml/js/container_jyL5O9uY.js'; s.parentNode.insertBefore(g,s);
+</script>
+<!-- End Matomo Tag Manager -->
 </head>
