--- a/templates/uhgp.html
+++ b/templates/uhgp.html
@@ -12,7 +12,7 @@
     </div>
     <div class="familyList">
         <h2>
-            UHGP List
+            UHGP Hits
         </h2>
         <ul class="breadcrumb" style="font-size: medium">
             <li><a href="{{ url_for('uhgp', name_id = 'Africa') }}">Africa</a> <span
