--- a/templates/uhgp_continent.html
+++ b/templates/uhgp_continent.html
@@ -12,7 +12,7 @@
     </div>
     <div class="familyList">
         <h2>
-            UHGP List
+            UHGP Hits
         </h2>
         <ul class="breadcrumb" style="font-size: medium">
             <li><a href="{{ url_for('uhgp', name_id = 'Africa') }}">Africa</a> <span
@@ -47,6 +47,7 @@
             <table id="data-table" class="table display">
                 <thead>
                 <tr>
+                    <th style="white-space: nowrap">Number</th>
                     <th style="white-space: nowrap">Gene ID</th>
                     <th style="white-space: nowrap">Name</th>
                     <th style="white-space: nowrap">Cluster ID</th>
@@ -55,12 +56,15 @@
                     <th style="white-space: nowrap">Country</th>
                     <th style="white-space: nowrap">Continent</th>
                     <th style="white-space: nowrap">Sequence</th>
+                    <th style="white-space: nowrap"><br></th>
                 </tr>
                 </thead>
                 <tbody>
                 {% for record in records %}
                     <tr>
-                    <td>{{ record.gene_id }}</td>
+                    <td>{{ record.number }}</td>
+                    <td><a href="{{record.MGnify}}" rel="noopener noreferrer"
+                           target="_blank">{{ record.gene_id }}</a></td>
                     <td>{{ record.name }}</td>
                     <td>{{ record.cluster_id }}</td>
                     <td>{{ record.type }}</td>
@@ -69,6 +73,8 @@
                     <td>{{ record.continent }}</td>
                     <td><a href="{{ url_for('detail',mode='uhpg', unid = record.gene_id) }}" target="_blank">view</a>
                     </td>
+                    <td><p hidden>>{{ record.gene_id }} </p>
+                        <p hidden style="max-width: 40ch; word-wrap:break-word;">{{ record.seq }}</p></td>
                 {% endfor %}
                 </tbody>
             </table>
@@ -83,6 +89,11 @@
                 },
                 lengthMenu: [[10, 25, 50, -1], ['10 rows', '25 rows', '50 rows', 'Show all']],
                 dom: 'Bfrtip',
+                columnDefs: [{
+                    targets: -1,
+                    searchable: true,
+                    visible: false
+                }],
                 buttons: [
                     'pageLength',
                     {
@@ -95,7 +106,11 @@
                         fieldBoundary: '',
                         text: 'Copy',
                         title: '',
-                        header: '\n'
+                        header: '\n',
+                        exportOptions: {
+                            stripNewlines: false,
+                            columns: [-1]
+                        }
                     }
                 ],
                 select: true
