Date by date update by bo

--- a/templates/family.html
+++ b/templates/family.html
@@ -14,10 +14,11 @@
     <a class="btn btn-primary btn-lg btn-block" href="{{ url_for('network', family_id = family_id) }}">View sequence
         similarity network</a>
 
-    {% if amount != 0 %}
+    
         <div class="subFamily">
             <h2>Subfamily</h2>
             <ul class="breadcrumb" style="font-size: medium">
+                {% if amount != 0 %}
                 {% for i in range(amount) %}
                     {% set family_id = family_id + '_' + (i + 1)|string() %}
                     {% if is_family_char(family_id) %}
@@ -32,9 +33,13 @@
                         </li>
                     {% endif %}
                 {% endfor %}
+                {% else %}
+                    <li>This family does not contain subfamilies</li>
+                 {% endif %}
             </ul>
         </div>
-    {% endif %}
+    
+
     <div class="familyResource">
         <h2>Family Sequences</h2>
         <ul class="breadcrumb" style="font-size: medium">
