--- a/templates/swissport.html
+++ b/templates/swissport.html
@@ -126,6 +126,7 @@
             <tr>
                 <th style="white-space: nowrap">Protein Name</th>
                 <th style="white-space: nowrap">Strain</th>
+                <th style="white-space: nowrap">db</th>
                 <th style="white-space: nowrap">Uniprot</th>
                 <th style="white-space: nowrap">PDB</th>
                 <th style="white-space: nowrap">Family</th>
@@ -143,6 +144,7 @@
                     <td>
                         <a href="https://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?id={{ record.web_id }}">{{ record.strain }}</a>
                     </td>
+                    <td>{{record.db}}</td>
                     <td><a href="https://www.uniprot.org/uniprot/{{ record.uniq_id }}">{{ record.uniq_id }}</a></td>
 
                     {% if record.pdb  == '-1' %}
