--- a/templates/uhgp_cluster.html
+++ b/templates/uhgp_cluster.html
@@ -60,8 +60,9 @@
                 <tbody>
                 {% for record in records %}
                     <tr>
-                    <td>{{ record.cluster_id }}</td>
-                    <td>{{ record.gene_id }}</td>
+                    <td><a href="{{ url_for('cluster_detail', cluster_id = record.cluster_id) }}">{{ record.cluster_id }}</a></td>
+                    <td><a href="{{record.mgnify}}" rel="noopener noreferrer"
+                           target="_blank">{{ record.gene_id }}</a></td>
                     <td>{{ record.name }}</td>
                     <td>{{ record.pfam }}</td>
                     <td>{{ record.type }}</td>
