New db and content

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -82,6 +82,9 @@ html {
 	-webkit-overflow-scrolling: touch;
 	text-align: justify
 }
+.footnotes-sep{
+    display: none;
+}
 
 &::-webkit-scrollbar {
 	display: none
