--- a/templates/uhgp_continent.html
+++ b/templates/uhgp_continent.html
@@ -49,6 +49,7 @@
                 <tr>
                     <th style="white-space: nowrap">Gene ID</th>
                     <th style="white-space: nowrap">Name</th>
+                    <th style="white-space: nowrap">pfam</th>
                     <th style="white-space: nowrap">Cluster ID</th>
                     <th style="white-space: nowrap">Type</th>
                     <th style="white-space: nowrap">Lineage</th>
@@ -64,6 +65,11 @@
                     <td><a href="{{record.MGnify}}" rel="noopener noreferrer"
                            target="_blank">{{ record.gene_id }}</a></td>
                     <td>{{ record.name }}</td>
+                    <td>
+                        {% for pfam in pfam_dic[record.number] %}
+                                <a href="{{ pfam[1] }}" rel="noopener noreferrer" target="_blank">{{pfam[0]}}</a>
+                        {% endfor %}
+                    </td>
                     <td>{% if record.cluster_id == "NA" %}
                         &nbsp;
                         {% else %}
