Update tax_id to web_id

--- a/templates/characterized.html
+++ b/templates/characterized.html
@@ -106,7 +106,7 @@
 
                     {% endif %}
                     <td>
-                        <a href="https://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?id={{ record.tax_id }}"
+                        <a href="https://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?id={{ record.web_id }}"
                            rel="noopener noreferrer" target="_blank">{{ record.strain }}</a>
                     </td>
                     <td>
